--- a/scripts/todo.txt
+++ b/scripts/todo.txt
@@ -37,7 +37,7 @@ very important consideration because the way we're doing creates different model
 - [x] per dataset: dataset sample size issue (even with complete benchmarks probably)
 - [ ] per time series: disregarding potential dependencies among models and not so realistic
 (we're not selecting models per uid) but solves the dataset size issue
-
+- [ ] per model -- Cv methods as workflows
 
 # Notes
 - focused on neural networks trained for cross-learning
@@ -45,4 +45,4 @@ very important consideration because the way we're doing creates different model
 # todo improvements
 - add more models
 - add more datasets
-- improve evaluation
+- improve evaluation... include MASE
